k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-site
  labels:
    app: training-site
spec:
  selector:
    app: training-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
