k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-site
spec:
  ingressClassName: nginx
  rules:
    - host: mysite.sj
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: training-site
                port:
                  number: 80
